--- a/airbnb-explorer-nyc.ipynb
+++ b/airbnb-explorer-nyc.ipynb
@@ -11,13 +11,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ]
   }
  ],
  "metadata": {
