--- a/airbnb-explorer-nyc.ipynb
+++ b/airbnb-explorer-nyc.ipynb
@@ -10,19 +10,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import plotly.express as px\n",
+    "from dash import Dash, html, dcc, Input, Output"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash is running on http://127.0.0.1:4000/\n",
+      "\n",
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: on\n"
+     ]
+    }
+   ],
+   "source": [
+    "app = Dash(__name__)\n",
+    "\n",
+    "app.layout = html.Div([\n",
+    "    html.H1(\"Airbnb Explorer NYC\"),\n",
+    "])\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    app.run(debug=True, port=4000, use_reloader=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
