feat: price map works

--- a/airbnb-explorer-nyc.ipynb
+++ b/airbnb-explorer-nyc.ipynb
@@ -10,19 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
-    "from dash import Dash, html, dcc, Input, Output"
+    "import plotly.graph_objs as go\n",
+    "from dash import Dash, html, dcc, Input, Output\n",
+    "import dash_bootstrap_components as dbc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +196,7 @@
        "4               0.10                               1                 0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,19 +204,286 @@
    "source": [
     "df = pd.read_csv('data/AB_NYC_2019.csv')\n",
     "\n",
+    "# Print the first 5 rows of the dataframe\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48895"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Print the number of rows in the dataframe\n",
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                                  int64\n",
+       "name                               object\n",
+       "host_id                             int64\n",
+       "host_name                          object\n",
+       "neighbourhood_group                object\n",
+       "neighbourhood                      object\n",
+       "latitude                          float64\n",
+       "longitude                         float64\n",
+       "room_type                          object\n",
+       "price                               int64\n",
+       "minimum_nights                      int64\n",
+       "number_of_reviews                   int64\n",
+       "last_review                        object\n",
+       "reviews_per_month                 float64\n",
+       "calculated_host_listings_count      int64\n",
+       "availability_365                    int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Print the data types\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                                    0\n",
+       "name                                 16\n",
+       "host_id                               0\n",
+       "host_name                            21\n",
+       "neighbourhood_group                   0\n",
+       "neighbourhood                         0\n",
+       "latitude                              0\n",
+       "longitude                             0\n",
+       "room_type                             0\n",
+       "price                                 0\n",
+       "minimum_nights                        0\n",
+       "number_of_reviews                     0\n",
+       "last_review                       10052\n",
+       "reviews_per_month                 10052\n",
+       "calculated_host_listings_count        0\n",
+       "availability_365                      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check if there are any missing values\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fill NA/NaN values of reviews_per_month with 0\n",
+    "df.fillna({\"reviews_per_month\": 0}, inplace=True)\n",
+    "\n",
+    "# Check if there are any null values after filling\n",
+    "df[\"reviews_per_month\"].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Brooklyn', 'Manhattan', 'Queens', 'Staten Island', 'Bronx'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Print the unique values in the neighbourhood_group column\n",
+    "df[\"neighbourhood_group\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "221"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Print the count of unique values in the neighbourhood column\n",
+    "df[\"neighbourhood\"].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    48895.0\n",
+       "mean       152.7\n",
+       "std        240.2\n",
+       "min          0.0\n",
+       "25%         69.0\n",
+       "50%        106.0\n",
+       "75%        175.0\n",
+       "max      10000.0\n",
+       "Name: price, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Describe the price column\n",
+    "df[\"price\"].describe().round(1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that there are some extreme values in the dataset. These must be removed before visualization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "550.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_price = df[\"price\"].quantile(0.98)\n",
+    "max_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    47949.0\n",
+       "mean       132.5\n",
+       "std         90.1\n",
+       "min         10.0\n",
+       "25%         68.0\n",
+       "50%        102.0\n",
+       "75%        175.0\n",
+       "max        550.0\n",
+       "Name: price, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Drop the rows where the price is 0\n",
+    "df = df[df[\"price\"] > 0]\n",
+    "\n",
+    "# Remove extremes values from price column\n",
+    "df = df[df[\"price\"] <= max_price]\n",
+    "\n",
+    "# Describe the price column\n",
+    "df[\"price\"].describe().round(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_price = df[\"price\"].min()\n",
+    "max_price = df[\"price\"].max()\n",
+    "mean_price = round(df[\"price\"].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dash is running on http://127.0.0.1:4000/\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
       "\n",
       " * Serving Flask app '__main__'\n",
       " * Debug mode: on\n"
@@ -222,22 +491,58 @@
     }
    ],
    "source": [
-    "app = Dash(__name__)\n",
+    "app = Dash(__name__, external_stylesheets=[dbc.themes.BOOTSTRAP])\n",
     "\n",
-    "app.layout = html.Div([\n",
+    "app.layout = dbc.Container([\n",
     "    html.H1(\"Airbnb Explorer NYC\"),\n",
+    "    html.Hr(),\n",
+    "    html.H3(\"Visualize the geographic distribution of housing on a map:\"),\n",
+    "    dbc.Row([\n",
+    "        dbc.Col([\n",
+    "            html.P(\"Select the price range (in dollars):\"),\n",
+    "        ], width=\"auto\"),\n",
+    "        dbc.Col([\n",
+    "            dcc.RangeSlider(min=min_price,\n",
+    "                            max=max_price,\n",
+    "                            step=1,\n",
+    "                            value=[min_price, max_price],\n",
+    "                            marks=None,\n",
+    "                            tooltip={\"placement\": \"bottom\", \"always_visible\": True},\n",
+    "                            allowCross=False,\n",
+    "                            id=\"slider-price\"),\n",
+    "        ]),\n",
+    "    ], align=\"center\"),\n",
+    "    dcc.Graph(id=\"price-map\"),\n",
+    "    html.Hr(),\n",
     "])\n",
     "\n",
+    "@app.callback(Output('price-map', 'figure'),\n",
+    "              Input('slider-price', 'value'))\n",
+    "\n",
+    "def update_price_map(slider_price):\n",
+    "    df_filtered = df[(df[\"price\"] >= slider_price[0]) & (df[\"price\"] <= slider_price[1])]\n",
+    "\n",
+    "    fig = px.scatter_mapbox(df_filtered,\n",
+    "                            lat=\"latitude\",\n",
+    "                            lon=\"longitude\",\n",
+    "                            hover_name=\"name\",\n",
+    "                            hover_data=[\"price\", \"availability_365\"],\n",
+    "                            height=500,\n",
+    "                            zoom=9,\n",
+    "                            color=\"price\",\n",
+    "                            color_continuous_scale=px.colors.sequential.Turbo,\n",
+    "                            opacity=0.6)\n",
+    "    \n",
+    "    fig.update_layout(mapbox_style=\"carto-positron\",\n",
+    "                      margin={\"r\":0,\"t\":0,\"l\":0,\"b\":0})\n",
+    "    \n",
+    "    fig.update_layout(showlegend=True,\n",
+    "                      coloraxis_colorbar=dict(title=\"Price\"))\n",
+    "    return fig\n",
+    "\n",
     "if __name__ == \"__main__\":\n",
-    "    app.run(debug=True, port=4000, use_reloader=False)"
+    "    app.run(debug=True, port=8050, use_reloader=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
