feat:model-working

--- a/airbnb-explorer-nyc.ipynb
+++ b/airbnb-explorer-nyc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 447,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,13 @@
     "from dash import Dash, html, dcc, Input, Output\n",
     "import matplotlib.pyplot as plt\n",
     "import statsmodels.formula.api as smf\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +198,7 @@
        "4               0.10                               1                 0  "
       ]
      },
-     "execution_count": 246,
+     "execution_count": 448,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 449,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +273,7 @@
        "2      Shared room   2.372431"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 449,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +349,7 @@
        "Name: price, dtype: float64"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 451,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 452,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 454,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 455,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +473,7 @@
        "Name: reviews_per_month, dtype: float64"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 455,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 466,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +664,7 @@
        "21                               6               347  "
       ]
      },
-     "execution_count": 247,
+     "execution_count": 466,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [
     {
@@ -686,48 +687,46 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:                  price   R-squared:                       0.502\n",
-      "Model:                            OLS   Adj. R-squared:                  0.502\n",
-      "Method:                 Least Squares   F-statistic:                     1413.\n",
+      "Dep. Variable:                  price   R-squared:                       0.494\n",
+      "Model:                            OLS   Adj. R-squared:                  0.493\n",
+      "Method:                 Least Squares   F-statistic:                     1534.\n",
       "Date:                Thu, 25 May 2023   Prob (F-statistic):               0.00\n",
-      "Time:                        19:49:47   Log-Likelihood:                -6817.9\n",
-      "No. Observations:               25205   AIC:                         1.367e+04\n",
-      "Df Residuals:                   25186   BIC:                         1.383e+04\n",
-      "Df Model:                          18                                         \n",
+      "Time:                        23:20:15   Log-Likelihood:                -7042.6\n",
+      "No. Observations:               25205   AIC:                         1.412e+04\n",
+      "Df Residuals:                   25188   BIC:                         1.426e+04\n",
+      "Df Model:                          16                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "=====================================================================================================\n",
       "                                        coef    std err          t      P>|t|      [0.025      0.975]\n",
       "-----------------------------------------------------------------------------------------------------\n",
-      "room_type_Entire home/apt           -81.4745      3.922    -20.771      0.000     -89.163     -73.786\n",
-      "room_type_Private room              -82.0102      3.922    -20.908      0.000     -89.698     -74.322\n",
-      "room_type_Shared room               -82.1274      3.923    -20.937      0.000     -89.816     -74.439\n",
-      "neighbourhood_group_Bronx           -49.0251      2.353    -20.835      0.000     -53.637     -44.413\n",
-      "neighbourhood_group_Brooklyn        -49.0756      2.351    -20.870      0.000     -53.685     -44.467\n",
-      "neighbourhood_group_Manhattan       -48.8835      2.356    -20.751      0.000     -53.501     -44.266\n",
-      "neighbourhood_group_Queens          -48.9874      2.348    -20.862      0.000     -53.590     -44.385\n",
-      "neighbourhood_group_Staten Island   -49.6405      2.359    -21.041      0.000     -54.265     -45.016\n",
-      "latitude                             -0.5518      0.061     -9.087      0.000      -0.671      -0.433\n",
-      "longitude                            -2.1345      0.070    -30.299      0.000      -2.273      -1.996\n",
-      "number_of_reviews                 -5.189e-05      5e-05     -1.037      0.300      -0.000    4.62e-05\n",
-      "availability_365                      0.0003   1.69e-05     18.724      0.000       0.000       0.000\n",
-      "reviews_per_month                    -0.0019      0.002     -1.262      0.207      -0.005       0.001\n",
-      "calculated_host_listings_count        0.0005   8.24e-05      5.956      0.000       0.000       0.001\n",
-      "minimum_nights                       -0.0013      0.000    -12.159      0.000      -0.001      -0.001\n",
-      "luxury                                0.1629      0.012     13.676      0.000       0.140       0.186\n",
-      "spacious                              0.0039      0.007      0.526      0.599      -0.011       0.018\n",
-      "cozy                                 -0.0799      0.006    -12.411      0.000      -0.092      -0.067\n",
-      "cheap                                -0.1528      0.069     -2.205      0.027      -0.289      -0.017\n",
-      "affordable                           -0.1227      0.035     -3.489      0.000      -0.192      -0.054\n",
+      "room_type_Entire home/apt           -74.1856      3.936    -18.849      0.000     -81.900     -66.471\n",
+      "room_type_Private room              -74.7185      3.936    -18.984      0.000     -82.433     -67.004\n",
+      "room_type_Shared room               -74.8273      3.936    -19.011      0.000     -82.542     -67.113\n",
+      "neighbourhood_group_Bronx           -44.6341      2.361    -18.904      0.000     -49.262     -40.006\n",
+      "neighbourhood_group_Brooklyn        -44.7174      2.360    -18.952      0.000     -49.342     -40.093\n",
+      "neighbourhood_group_Manhattan       -44.5113      2.364    -18.830      0.000     -49.144     -39.878\n",
+      "neighbourhood_group_Queens          -44.6181      2.356    -18.937      0.000     -49.236     -40.000\n",
+      "neighbourhood_group_Staten Island   -45.2505      2.367    -19.116      0.000     -49.890     -40.611\n",
+      "latitude                             -0.6740      0.061    -11.062      0.000      -0.793      -0.555\n",
+      "longitude                            -2.0445      0.071    -28.936      0.000      -2.183      -1.906\n",
+      "number_of_reviews                  5.642e-05   4.98e-05      1.133      0.257   -4.12e-05       0.000\n",
+      "reviews_per_month                     0.0007      0.002      0.456      0.649      -0.002       0.004\n",
+      "minimum_nights                       -0.0010      0.000     -9.267      0.000      -0.001      -0.001\n",
+      "luxury                                0.1646      0.012     13.694      0.000       0.141       0.188\n",
+      "spacious                             -0.0060      0.007     -0.813      0.416      -0.021       0.009\n",
+      "cozy                                 -0.0839      0.006    -12.933      0.000      -0.097      -0.071\n",
+      "cheap                                -0.1690      0.070     -2.418      0.016      -0.306      -0.032\n",
+      "affordable                           -0.1196      0.035     -3.371      0.001      -0.189      -0.050\n",
       "==============================================================================\n",
-      "Omnibus:                      248.694   Durbin-Watson:                   1.999\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              261.128\n",
-      "Skew:                           0.228   Prob(JB):                     1.98e-57\n",
-      "Kurtosis:                       3.202   Cond. No.                     1.01e+17\n",
+      "Omnibus:                      234.035   Durbin-Watson:                   1.998\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              243.875\n",
+      "Skew:                           0.224   Prob(JB):                     1.10e-53\n",
+      "Kurtosis:                       3.178   Cond. No.                     4.92e+16\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[2] The smallest eigenvalue is 8.18e-26. This might indicate that there are\n",
+      "[2] The smallest eigenvalue is 8.82e-26. This might indicate that there are\n",
       "strong multicollinearity problems or that the design matrix is singular.\n"
      ]
     }
@@ -747,25 +746,27 @@
     "    filtered_data[keyword] = names.str.contains(keyword).astype(int)\n",
     "\n",
     "encoded_data = pd.get_dummies(filtered_data, columns=['room_type', 'neighbourhood_group'])\n",
-    "\n",
-    "X = encoded_data[['room_type_Entire home/apt', 'room_type_Private room', 'room_type_Shared room', 'neighbourhood_group_Bronx', 'neighbourhood_group_Brooklyn', 'neighbourhood_group_Manhattan', 'neighbourhood_group_Queens', 'neighbourhood_group_Staten Island', 'latitude', 'longitude', 'number_of_reviews', 'availability_365', 'reviews_per_month', 'calculated_host_listings_count', 'minimum_nights', 'luxury', 'spacious', 'cozy', 'cheap', 'affordable']].copy()\n",
+    "X = encoded_data[['room_type_Entire home/apt', 'room_type_Private room', 'room_type_Shared room', 'neighbourhood_group_Bronx', 'neighbourhood_group_Brooklyn', 'neighbourhood_group_Manhattan', 'neighbourhood_group_Queens', 'neighbourhood_group_Staten Island', 'latitude', 'longitude', 'number_of_reviews', 'reviews_per_month', 'minimum_nights','luxury', 'spacious', 'cozy', 'cheap', 'affordable']].copy()\n",
     "y = np.log(encoded_data['price'])\n",
     "\n",
     "price_model = sm.OLS(y, X).fit()\n",
+    "\n",
+    "with open('price_model.pickle', 'wb') as f:\n",
+    "    pickle.dump(price_model, f)\n",
     "\n",
     "print(price_model.summary())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE:  40.94627362877425\n"
+      "RMSE:  41.44565230068204\n"
      ]
     }
    ],
@@ -778,6 +779,7 @@
     "\n",
     "filtered_data = df_test[(df_test['price'] < np.quantile(df_test['price'], 0.9)) & (df_test['price'] > np.quantile(df_test['price'], 0.1))].copy()\n",
     "filtered_data.dropna(inplace=True)\n",
+    "\n",
     "names = filtered_data['name'].str.lower()\n",
     "\n",
     "keywords = ['luxury', 'spacious', 'cozy', 'cheap', 'affordable']\n",
@@ -787,12 +789,66 @@
     "\n",
     "encoded_data = pd.get_dummies(filtered_data, columns=['room_type', 'neighbourhood_group'])\n",
     "\n",
-    "X_test = encoded_data[['room_type_Entire home/apt', 'room_type_Private room', 'room_type_Shared room', 'neighbourhood_group_Bronx', 'neighbourhood_group_Brooklyn', 'neighbourhood_group_Manhattan', 'neighbourhood_group_Queens', 'neighbourhood_group_Staten Island', 'latitude', 'longitude', 'number_of_reviews', 'availability_365', 'reviews_per_month', 'calculated_host_listings_count', 'minimum_nights', 'luxury', 'spacious', 'cozy', 'cheap', 'affordable']].copy()\n",
+    "X_test = encoded_data[['room_type_Entire home/apt', 'room_type_Private room', 'room_type_Shared room', 'neighbourhood_group_Bronx', 'neighbourhood_group_Brooklyn', 'neighbourhood_group_Manhattan', 'neighbourhood_group_Queens', 'neighbourhood_group_Staten Island', 'latitude', 'longitude', 'number_of_reviews', 'reviews_per_month', 'minimum_nights','luxury', 'spacious', 'cozy', 'cheap', 'affordable']].copy()\n",
     "\n",
     "pred_regression = price_model.predict(X_test)\n",
     "pred_regression = np.exp(pred_regression)\n",
     "\n",
     "print('RMSE: ', np.sqrt(mean_squared_error(filtered_data['price'], pred_regression)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 477,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def estimate_price(room_type, neighbourhood_group, latitude=40.73, longitude=-73.95, number_of_reviews=5.0, reviews_per_month=0.72, minimum_nights=1, name=\"\"):\n",
+    "    with open('price_model.pickle', 'rb') as f:\n",
+    "        price_model = pickle.load(f)\n",
+    "        X_new = pd.DataFrame({\n",
+    "            'room_type_Entire home/apt': [1 if room_type == \"Entire home/apt\" else 0],\n",
+    "            'room_type_Private room': [1 if room_type == \"Private room\" else 0],\n",
+    "            'room_type_Shared room': [1 if room_type == \"Shared room\" else 0],\n",
+    "            'neighbourhood_group_Bronx': [1 if neighbourhood_group == \"Bronx\" else 0],\n",
+    "            'neighbourhood_group_Brooklyn': [1 if neighbourhood_group == \"Brooklyn\" else 0],\n",
+    "            'neighbourhood_group_Manhattan': [1 if neighbourhood_group == \"Manhattan\" else 0],\n",
+    "            'neighbourhood_group_Queens': [1 if neighbourhood_group == \"Queens\" else 0],\n",
+    "            'neighbourhood_group_Staten Island': [1 if neighbourhood_group == \"Staten Island\" else 0],\n",
+    "            'latitude': [latitude],\n",
+    "            'longitude': [longitude],\n",
+    "            'number_of_reviews': [number_of_reviews],\n",
+    "            'reviews_per_month': [reviews_per_month],\n",
+    "            'minimum_nights': [minimum_nights],\n",
+    "            'luxury': [1 if 'luxury' in name.lower() else 0],\n",
+    "            'spacious': [1 if 'spacious' in name.lower() else 0],\n",
+    "            'cozy': [1 if 'cozy' in name.lower() else 0],\n",
+    "            'cheap': [1 if 'cheap' in name.lower() else 0],\n",
+    "            'affordable': [1 if 'affordable' in name.lower() else 0]\n",
+    "        })\n",
+    "        y_pred = price_model.predict(X_new)\n",
+    "        return np.exp(y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 478,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    61.017844\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 478,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimate_price(\"Shared room\", \"Bronx\", minimum_nights=1, name=\"Cheap room in Bronx\")"
    ]
   },
   {
