feat:adress-added

--- a/airbnb-explorer-nyc.ipynb
+++ b/airbnb-explorer-nyc.ipynb
@@ -799,13 +799,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 483,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def estimate_price(room_type, neighbourhood_group, latitude=40.73, longitude=-73.95, number_of_reviews=5.0, reviews_per_month=0.72, minimum_nights=1, name=\"\"):\n",
+    "import requests\n",
+    "import urllib.parse\n",
+    "\n",
+    "def estimate_price(room_type, neighbourhood_group, address, number_of_reviews=5.0, reviews_per_month=0.72, minimum_nights=1, name=\"\"):\n",
     "    with open('price_model.pickle', 'rb') as f:\n",
     "        price_model = pickle.load(f)\n",
+    "        address = address.lower() + \", New York, NY, USA\"\n",
+    "        url = 'https://nominatim.openstreetmap.org/search/' + urllib.parse.quote(address) +'?format=json'\n",
+    "        response = requests.get(url).json()\n",
+    "        latitude = response[0][\"lat\"]\n",
+    "        longitude = response[0][\"lon\"]\n",
     "        X_new = pd.DataFrame({\n",
     "            'room_type_Entire home/apt': [1 if room_type == \"Entire home/apt\" else 0],\n",
     "            'room_type_Private room': [1 if room_type == \"Private room\" else 0],\n",
@@ -849,6 +857,32 @@
    ],
    "source": [
     "estimate_price(\"Shared room\", \"Bronx\", minimum_nights=1, name=\"Cheap room in Bronx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 481,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.7456073\n",
+      "-73.99990638496621\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import urllib.parse\n",
+    "\n",
+    "address = '332 W 23rd St, New York, NY'\n",
+    "url = 'https://nominatim.openstreetmap.org/search/' + urllib.parse.quote(address) +'?format=json'\n",
+    "\n",
+    "response = requests.get(url).json()\n",
+    "print(response[0][\"lat\"])\n",
+    "print(response[0][\"lon\"])"
    ]
   },
   {
