--- a/airbnb-explorer-nyc.ipynb
+++ b/airbnb-explorer-nyc.ipynb
@@ -11,7 +11,11 @@
   {
    "cell_type": "code",
    "execution_count": 447,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -27,7 +31,11 @@
   {
    "cell_type": "code",
    "execution_count": 448,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -219,7 +227,11 @@
   {
    "cell_type": "code",
    "execution_count": 449,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -293,7 +305,11 @@
   {
    "cell_type": "code",
    "execution_count": 450,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -333,7 +349,11 @@
   {
    "cell_type": "code",
    "execution_count": 451,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -361,7 +381,11 @@
   {
    "cell_type": "code",
    "execution_count": 452,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -385,7 +409,11 @@
   {
    "cell_type": "code",
    "execution_count": 453,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -409,7 +437,11 @@
   {
    "cell_type": "code",
    "execution_count": 454,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -457,7 +489,11 @@
   {
    "cell_type": "code",
    "execution_count": 455,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -493,7 +529,11 @@
   {
    "cell_type": "code",
    "execution_count": 466,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -679,7 +719,11 @@
   {
    "cell_type": "code",
    "execution_count": 475,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -760,7 +804,11 @@
   {
    "cell_type": "code",
    "execution_count": 476,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -799,8 +847,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
-   "metadata": {},
+   "execution_count": 489,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -812,8 +864,8 @@
     "        address = address.lower() + \", New York, NY, USA\"\n",
     "        url = 'https://nominatim.openstreetmap.org/search/' + urllib.parse.quote(address) +'?format=json'\n",
     "        response = requests.get(url).json()\n",
-    "        latitude = response[0][\"lat\"]\n",
-    "        longitude = response[0][\"lon\"]\n",
+    "        latitude = float(response[0][\"lat\"])\n",
+    "        longitude = float(response[0][\"lon\"])\n",
     "        X_new = pd.DataFrame({\n",
     "            'room_type_Entire home/apt': [1 if room_type == \"Entire home/apt\" else 0],\n",
     "            'room_type_Private room': [1 if room_type == \"Private room\" else 0],\n",
@@ -840,29 +892,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
-   "metadata": {},
+   "execution_count": 496,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0    61.017844\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 478,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66.86543230010098\n"
+     ]
     }
    ],
    "source": [
-    "estimate_price(\"Shared room\", \"Bronx\", minimum_nights=1, name=\"Cheap room in Bronx\")"
+    "estimate = estimate_price(\"Shared room\", \"Bronx\", minimum_nights=1, name=\"Cheap room in Bronx\", address=\"332 W 23rd St\")\n",
+    "# Retrieve the result in float\n",
+    "print(estimate[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 481,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -888,7 +946,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -918,18 +980,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
